--- a/pages/require.html
+++ b/pages/require.html
@@ -10,7 +10,7 @@
         padding: 0;
         height: 100%;
         box-sizing: border-box;
-        background-color: #BDD5EA;
+        background-color:#E9ECF5;
     }</style>
     <title>Document</title>
 </head>
@@ -62,5 +62,7 @@
 <img id="JPGimage" style="max-height: 200px" src="../images/29264.png">
 <img id="bananaGif" style="max-height: 200px" src="../images/dancing-banana.gif">
 </section>
+<div id="transform1"></div>
+<div id="transform2"></div>
 </body>
 </html>
