--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css"/>
     <script src="./scripts/script.js" defer></script>
-    <title>Fitness Tracker</title>
+    <title>monke Tracker</title>
 </head>
 <body>
     <div id="bounds">
         <div id="hero">
-            <div id="name">Tracker Name</div>
+            <div id="name">monke Tracker</div>
             <img/>
         </div>
         <section id="buttonCase">
@@ -18,13 +18,13 @@
           <button onclick=showRoutine() id="button1" class="button">Routine</button>
           <!-- <a href="./pages/history.html" >History</a> -->
           <button id="button2" class="button">Past Workouts</button>
-          <button id="button3" class="button">Skills</button>
+          <button id="button3" class="button">Exercises</button>
         </section>
         <section id="hiddenCase">
             <button id="hiddenbutton1" class="button" onclick="window.location.href='./pages/push.html'">Push</button>
             <button id="hiddenbutton2" class="button" onclick="window.location.href='./pages/pull.html'">Pull</button>
             <button id="hiddenbutton3" class="button" onclick="window.location.href='./pages/legs.html'">Legs</button>
-            <button id="hiddenbutton3" class="button" onclick="window.location.href='./pages/require.html'">Require</button>
+            <!-- <button id="hiddenbutton3" class="button" onclick="window.location.href='./pages/require.html'">Require</button> -->
             <button onclick=flipback() class="miniButton">back</button>
         </section>
     </div>
