--- a/pages/legs.html
+++ b/pages/legs.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css"/>
-    <script src="../scripts/script.js" defer></script>
+    <!-- <script src="../scripts/script.js" defer></script> -->
+    <script src="../scripts/scriptRoutine.js" defer></script>
     <title>Fitness Tracker</title>
 </head>
 <body>
     <div id="bounds">
-    </div>
-    <header>
-        
-    </header>
-    <div>
-
+        <div id="textWall"></div>
+        <div id="spacer"></div>
+        <section id="hiddenTextarea">
+            <p id="helpText" style="margin-left:15px;margin-bottom: -10px;">Add Movement Group</p>
+            <textarea id="textArea"></textarea>
+        </section>
+        <section id="navCase">
+        <button onclick=window.location.href="../index.html" id="back" class="miniButton">back</button>
+        <button onclick=clickPlus() id="plus">+</button>
+    </section>
     </div>
 </body>
 </html>
