--- a/pages/push.html
+++ b/pages/push.html
@@ -24,6 +24,7 @@
         </section>
         <section id="navCase">
         <button onclick=window.location.href="../index.html" id="back" class="miniButton">back</button>
+        <button onclick=clickCheck() id="check">✓</button>
         <button onclick=clickPlus() id="plus">+</button>
     </section>
     </div>
