--- a/pages/push.html
+++ b/pages/push.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../styles/styleRoutine.css"/>
     <link rel="icon" href="../favicon.png"/>
     <script src="../scripts/scriptRoutine.js" defer></script>
-    <title>monke Tracker</title>
+    <title>monkeTracker</title>
 </head>
 <body>
     <div id="bounds">
