--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/style.css"/>
     <link rel="icon" type="image/png" href="./favicon.png"/>
     <script src="./scripts/script.js" defer></script>
-    <title>monke Tracker</title>
+    <title>monkeTracker</title>
 </head>
 <body>
     <div id="bounds">
