--- a/pages/pull.html
+++ b/pages/pull.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../styles/styleRoutine.css"/>
     <!-- <script src="../scripts/script.js" defer></script> -->
     <script src="../scripts/scriptRoutine.js" defer></script>
-    <title>Fitness Tracker</title>
+    <title>monkeTracker</title>
 </head>
 <body>
     <div id="bounds">
