--- a/pages/push.html
+++ b/pages/push.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div id="bounds">
+        <img src="../favicon.png" id="favPulse" class="pulsing">
         <h1 id='helpCreateHeader' class="help-create">Create Your Workout</h1>
         <div id="textWall"></div>
         <div id='helpCreateP' class ='help-create'>
