--- a/pages/push.html
+++ b/pages/push.html
@@ -22,7 +22,7 @@
         </div><form id="actionForm">
             <p>Are you ready to workout?</p>
             <label>Yes<input required type="checkbox" name="y/n"/></label>
-            <!-- html validation  -->
+            <!-- html validation 5% -->
             <label>No<input type="checkbox" name = "y/n"/></label>
             <input type="submit" value="Submit">
         </form>
