--- a/pages/pull.html
+++ b/pages/pull.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div id="bounds">
+        <img src="../favicon.png" id="favPulse" class="pulsing">
         <h1 id='helpCreateHeader' class="help-create">Create Your Workout</h1>
         <div id="textWall"></div>
         <div id='helpCreateP' class ='help-create'>
@@ -21,7 +22,7 @@
         </div><form id="actionForm">
             <p>Are you ready to workout?</p>
             <label>Yes<input required type="checkbox" name="y/n"/></label>
-            <!-- html validation  -->
+            <!-- html validation 5% -->
             <label>No<input type="checkbox" name = "y/n"/></label>
             <input type="submit" value="Submit">
         </form>
