--- a/pages/push.html
+++ b/pages/push.html
@@ -22,13 +22,14 @@
         </div><form id="actionForm">
             <p>Are you ready to workout?</p>
             <label>Yes<input required type="checkbox" name="y/n"/></label>
-            <!-- html validation 5% -->
+            <!-- html validation 5% ✓ -->
             <label>No<input type="checkbox" name = "y/n"/></label>
             <input type="submit" value="Submit">
         </form>
         <div id="spacer"></div>
-        <section id="hiddenTextarea">
+        <section id="hiddenText">
             <p id="helpText" style="margin-left:15px;margin-bottom: -10px;">Add Movement Group</p>
+            <!-- <button onclick=clearWall() id="refresh">⟲</button> -->
             <textarea id="textArea"></textarea>
         </section>
         <section id="navCase">
