--- a/pages/push.html
+++ b/pages/push.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="bounds">
-        <img src="../favicon.png" id="favPulse" class="pulsing">
+        <img src="../monkeman.png" id="favPulse" class="pulsing">
         <h1 id='helpCreateHeader' class="help-create">Create Your Workout</h1>
         <div id="textWall"></div>
         <div id='helpCreateP' class ='help-create'>
@@ -33,7 +33,7 @@
             <textarea id="textArea"></textarea>
         </section>
         <section id="navCase">
-        <button onclick=backButton() id="back" class="button">←</button>
+        <button onclick=clickBack() id="back" class="button">←</button>
         <button onclick=clickCheck() id="check">✓</button>
         <button onclick=clickPlus() id="plus">+</button>
     </section>
