--- a/pages/push.html
+++ b/pages/push.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css"/>
     <link rel="stylesheet" href="../styles/styleRoutine.css"/>
-    <link rel="icon" href="../favicon.png"/>
+    <link rel="icon" href="../favicon2.png"/>
     <script src="../scripts/scriptRoutine.js" defer></script>
     <title>monkeTracker</title>
 </head>
