--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,10 @@
             <img id='heroImg' src="./images/heroImg.gif"/>
         </div>
         <section id="buttonCase">
-            <div id="dayTrack">Training for X Days</div>
+            <div id="dayTrack"></div>
           <button onclick=showRoutine() id="button1" class="button">Routine</button>
           <!-- <a href="./pages/history.html" >History</a> -->
-          <button id="button2" class="button" onclick="window.location.href='./history.html'">Past Workouts</button>
+          <button id="button2" class="button" onclick="window.location.href='/history'">Past Workouts</button>
           <button id="button3" class="button">Exercises</button>
         </section>
         <section id="hiddenCase">
