--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             <button id="hiddenbutton2" class="button" onclick="window.location.href='./pages/pull.html'">Pull</button>
             <button id="hiddenbutton3" class="button" onclick="window.location.href='./pages/legs.html'">Legs</button>
             <!-- <button id="hiddenbutton3" class="button" onclick="window.location.href='./pages/require.html'">Require</button> -->
-            <button onclick=flipback() class="miniButton">←</button>
+            <button onclick=flipback() class="miniButton">← Back</button>
         </section>
     </div>
 </body>
