--- a/public/pages/push.html
+++ b/public/pages/push.html
@@ -21,10 +21,10 @@
             <p>Press Enter or +</p>
         </div><form id="actionForm">
             <p>Are you ready to workout?</p>
-            <label>Yes<input required type="checkbox" name="y/n"/></label>
+            <label>Yes<input required type="checkbox" name="y/n" style="cursor:pointer;"/></label>
             <!-- html validation 5% ✓ -->
-            <label>No<input type="checkbox" name = "y/n"/></label>
-            <input type="submit" value="Submit">
+            <label>No<input type="checkbox" name = "y/n" style="cursor:pointer;"/></label>
+            <input type="submit" value="Submit" style="cursor:pointer;">
         </form>
         <div id="spacer"></div>
         <section id="hiddenText">
@@ -34,8 +34,8 @@
         </section>
         <section id="navCase">
         <button onclick=clickBack() id="back" class="button">←</button>
-        <button onclick=clickCheck() id="check">✓</button>
-        <button onclick=clickPlus() id="plus">+</button>
+        <button onclick=clickCheck() id="check" style="cursor:pointer;">✓</button>
+        <button onclick=clickPlus() id="plus" style="cursor:pointer;">+</button>
     </section>
     </div>
 </body>
